<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#EFF7FE"
    android:layout_height="match_parent"
    tools:context=".activity.SubscriptionActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/logo"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/txt1"
        android:layout_marginLeft="@dimen/_30sdp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/subscription_trial_period_15_days"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_35sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:id="@+id/greenbg"
        android:layout_marginRight="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_180sdp"
        app:layout_constraintTop_toBottomOf="@+id/txt3"
        android:src="@drawable/greenrectangle"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:id="@+id/redbg"
        android:layout_marginLeft="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:src="@drawable/redrectangle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_120sdp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt2"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/subsription_plan"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt3"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_50ssp"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/_59"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/txt4"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/_60sdp"
        android:drawablePadding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/lorem_ipsum_is_simply_dummy1"
        app:layout_constraintTop_toBottomOf="@+id/redbg"
        android:gravity="center"
        android:drawableLeft="@drawable/checkicon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/txt5"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_60sdp"
        android:drawablePadding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/lorem_ipsum_is_simply_dummy2"
        app:layout_constraintTop_toBottomOf="@+id/txt4"
        android:gravity="center"
        android:drawableLeft="@drawable/checkicon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/txt6"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_60sdp"
        android:drawablePadding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/lorem_ipsum_is_simply_dummy3"
        app:layout_constraintTop_toBottomOf="@+id/txt5"
        android:gravity="center"
        android:drawableLeft="@drawable/checkicon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/txt7"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_60sdp"
        android:drawablePadding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/lorem_ipsum_is_simply_dummy4"
        app:layout_constraintTop_toBottomOf="@+id/txt6"
        android:gravity="center"
        android:drawableLeft="@drawable/checkicon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:id="@+id/txt8"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_60sdp"
        android:drawablePadding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/lorem_ipsum_is_simply_dummy5"
        app:layout_constraintTop_toBottomOf="@+id/txt7"
        android:gravity="center"
        android:drawableLeft="@drawable/checkicon"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt9"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_50sdp"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/lorem_ipsum_is_simply_dummy_text_n_of_the_printing_and_typesetting_industry"
        app:layout_constraintTop_toBottomOf="@+id/txt8"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btntrial"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/redbuttton"
        android:layout_marginLeft="@dimen/_80sdp"
        android:textSize="@dimen/_12ssp"
        android:layout_marginRight="@dimen/_80sdp"
        android:textColor="@color/white"
        android:text="@string/trial_period_15_days"
        app:layout_constraintTop_toBottomOf="@+id/txt9"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>