<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContactUsActivity">

    <include
        android:id="@+id/contactHeader"
        layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/con_main"
        app:layout_constraintTop_toBottomOf="@id/contactHeader"
        android:layout_height="wrap_content">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactHeader"
            android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/iv_contact_us"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_contact_us"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/firstnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0123456789"
        app:layout_constraintTop_toBottomOf="@id/txtContactUs"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/light_grey"/>
    <Button
        android:id="@+id/secondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0123456789"
        app:layout_constraintTop_toBottomOf="@id/firstnumber"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/light_grey"/>

    <TextView
        android:id="@+id/txtContactActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        app:layout_constraintTop_toBottomOf="@id/secondNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textSize="@dimen/_15ssp"/>
    <TextView
        android:id="@+id/dummyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loeum_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry"
        app:layout_constraintTop_toBottomOf="@id/txtContactActivity"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/dummyText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        android:layout_marginLeft="@dimen/_20sdp"
        android:hint="@string/enter_name"
        android:singleLine="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:padding="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/light_grey"/>
 <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        android:layout_marginLeft="@dimen/_20sdp"
        android:hint="@string/enter_email"
        android:singleLine="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:padding="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/light_grey"/>
            <TextView
                android:id="@+id/txtSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Subject"
                app:layout_constraintTop_toBottomOf="@id/etEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"/>
            <EditText
                android:id="@+id/etSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@id/txtSubject"
                android:layout_marginLeft="@dimen/_20sdp"
                android:hint="@string/enter_subject"
                android:layout_marginRight="@dimen/_20sdp"
                android:padding="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/light_grey"/>
 <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        app:layout_constraintTop_toBottomOf="@id/etSubject"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:singleLine="false"
        app:layout_constraintTop_toBottomOf="@id/txtMessage"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:hint="@string/enter_message"
        android:padding="@dimen/_7sdp"
        android:gravity="start"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/light_grey"/>
            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:background="@drawable/green_button"
                app:layout_constraintTop_toBottomOf="@id/etMessage"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintTop_toBottomOf="@id/btnSend"
                android:layout_marginTop="@dimen/_50sdp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>