<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewpasswordActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/newPasswordHeader"/>

    <EditText
        android:id="@+id/currentpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/newPasswordHeader"
        android:hint="@string/current_password"
        android:layout_margin="@dimen/_20sdp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/currentpassword"
        android:hint="@string/new_password"
        android:layout_margin="@dimen/_20sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"/>

    <EditText
        android:id="@+id/cnfpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:hint="@string/confirm_password"
        android:singleLine="true"
        android:layout_margin="@dimen/_20sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        android:textAllCaps="false"
        android:id="@+id/btnchange"
        android:textSize="@dimen/_17ssp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/cnfpassword"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/green_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>