<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#EFF7FE"
    android:layout_height="match_parent"
    tools:context=".activity.InfoActivity3">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/filebg3"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/file3"
        android:layout_marginTop="@dimen/_80sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/lorem_ipsum_is_simply"
        android:gravity="center"
        android:id="@+id/txt1"
        android:layout_marginTop="@dimen/_190sdp"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy"
        android:id="@+id/txt2"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginRight="@dimen/_65sdp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/_65sdp"
        android:background="@drawable/rectanglelogin"
        android:textColor="@color/black"
        android:id="@+id/btngetstart"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        app:layout_constraintBottom_toBottomOf="parent"/>







</androidx.constraintlayout.widget.ConstraintLayout>
</layout>